<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash.SplashActivity">

    <ImageView
        android:id="@+id/splashImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash"
        android:src="@drawable/splash" />

    <ImageView
        android:id="@+id/markLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/oneOneThree"
        android:layout_marginTop="@dimen/oneninetyseven"
        android:layout_marginEnd="@dimen/oneOneThree"
        android:contentDescription="@string/marklogo"
        android:src="@drawable/logo_mark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/rain_sensing"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/markLogo" />

    <TextView
        android:id="@+id/splashDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_light"
        android:text="@string/rain_sensing_simplified"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/heading"
        app:layout_constraintStart_toStartOf="@id/heading"
        app:layout_constraintTop_toBottomOf="@id/heading" />
</androidx.constraintlayout.widget.ConstraintLayout>