<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".onboard.OnBoardActivity">

    <ImageView
        android:id="@+id/onboardImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/seventy"
        android:contentDescription="@string/onboard"
        android:src="@drawable/onboard_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="@dimen/eightynine"
        android:layout_marginEnd="13dp"
        android:background="@drawable/viewpager_bg"
        app:layout_constraintTop_toBottomOf="@id/onboardImg" />

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="@id/viewPager"
        app:layout_constraintEnd_toEndOf="@id/viewPager"
        app:ci_drawable="@drawable/indicator_selected"
        app:ci_drawable_unselected="@drawable/indicator_unselected"
        app:layout_constraintStart_toStartOf="@id/viewPager" />

    <TextView
        android:id="@+id/skipTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/skip"
        android:textColor="#1196CB"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator" />

    <TextView
        android:id="@+id/nextTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="77dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/next"
        android:textColor="#1196CB"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/skipTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/skipTv"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/rain_sensing_app_version_1_0"
        android:textColor="#4A3F7F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>